--- a/Mysql实战45讲/04-深入浅出索引(上).MD
+++ b/Mysql实战45讲/04-深入浅出索引(上).MD
@@ -32,6 +32,6 @@
 
 #### 为何不建议使用UUID作为主键？
 1. UUID是无序的，每次插入一条新纪录并不是追加操作，每次都可能涉及到挪动其他记录，影响插入性能。
-2. UUID太长，会导致普通索引的叶子节点很长，占用空间变大。
+2. UUID太长，而普通索引的叶子节点是主键，这就会导致其叶子节点很长，占用空间变大。
 
 所以，从插入性能和存储空间方面考量，自增主键往往是更合理的选择。
