how to manage time

--- a/java-notes/2019/时间管理.MD
+++ b/java-notes/2019/时间管理.MD
@@ -14,3 +14,38 @@
 1.目标要具体
 2.目标要有时间范围约束
 3.目标要有能力达成
+
+## 提高效率的措施
+你应该尝试在你经理最充沛的时候去从事那些最艰巨的任务。这样一来，你将最有可能在最短的时间内完成这些工作。
+
+## 如何战胜拖延
+1.在口袋里放一张便签，提醒自己要达成的目标。
+2.将大项目分解层易管理的小块。
+3.识别拖延的蛛丝马迹并立刻采取措施。
+4.坚持记笔记、写思路，有助于以后变成行动。
+
+## 高效工作的技巧
+1.使你的工作区域更具有吸引力，并配备你工作所需要的一切。
+2.创建一个清单，把你所需关注的一切事情写上去。
+3.把想法转变为行动步骤。
+4.一旦决定了行动步骤，如果可能的话，要马上采取行动。
+5.保持良好的提醒系统。
+6.每周对你的工作进行回顾。
+7.至少每个月对你的长期目标进行重温，确保朝着正确的方向前进。
+
+## 关于计划
+你每天至少应该花10分钟时间，来规划你这一天该如何度过。
+
+## 关于准备
+提前思考和做好准备，可以减少你所要付出的汗水。
+
+## 关于任务清单
+1.该做什么，不该做什么，提高效率。
+2.直观的看到工作安排，减轻压力。
+3.重申目标和优先事项。
+
+## 确定优先次序
+在制作任务清单时，我们总是需要在紧急项目和重要项目之间平衡，在可能的情况下，要把重要项目放在紧急项目之前。将任务清单按照ABC定个优先级，然后按照重要次序完成你的任务清单。
+
+## 关于二八定律
+你的80%的成就来自于你的20%的行为。一些活动会比另一些活动带来更大的回报，因此要把大部分精力投入到那些真正能够给你带来最大利益的项目上去。
