--- a/java-notes/2019/时间管理.MD
+++ b/java-notes/2019/时间管理.MD
@@ -1,8 +1,3 @@
-## 你目前是如何利用时间的
-1.每天结束后，利用上床前的一点时间，记录下24小时是怎么度过的，一周下来，可以清楚的看到你的时间都花到哪里去了。
-
-2.意识到自己对时间的感觉，可以使你更了解自己。
-
 ## 为什么时间自我意识很重要
 1.通过自我意识，你会发现某些地方可以作调整。
 
@@ -16,11 +11,11 @@
 3.目标要有能力达成
 
 ## 提高效率的措施
-你应该尝试在你经理最充沛的时候去从事那些最艰巨的任务。这样一来，你将最有可能在最短的时间内完成这些工作。
+你应该尝试在你精力最充沛的时候去从事那些最艰巨的任务。这样一来，你将最有可能在最短的时间内完成这些工作。
 
 ## 如何战胜拖延
 1.在口袋里放一张便签，提醒自己要达成的目标。
-2.将大项目分解层易管理的小块。
+2.将大项目分解成易管理的小块。
 3.识别拖延的蛛丝马迹并立刻采取措施。
 4.坚持记笔记、写思路，有助于以后变成行动。
 
@@ -36,8 +31,6 @@
 ## 关于计划
 你每天至少应该花10分钟时间，来规划你这一天该如何度过。
 
-## 关于准备
-提前思考和做好准备，可以减少你所要付出的汗水。
 
 ## 关于任务清单
 1.该做什么，不该做什么，提高效率。
