--- a/java-notes/2019/腾讯传.MD
+++ b/java-notes/2019/腾讯传.MD
@@ -1,1 +1,14 @@
 ## 腾讯传
+
+### 作对的事情
+1. 产品技术的微创新
+2. 重视用户体验
+3. 谋求外力支持
+
+### 马化腾的七种武器
+1. 产品极简主义（少就是最合适的，别让我思考）
+2. 用户驱动战略
+3. 内部赛马机制
+4. 试错迭代策略（小步、迭代、试错、快跑）
+5. 生态养成模式
+6. 
